[package]
name = "echo-server"
version = "1.2.1"
authors = ["Martijn Swaagman <martijn@swaagman.online>"]
description = "HTTP echo server"
edition = "2021"
license = "MIT"
keywords = ["echo", "server", "http"]
exclude = [
  ".github",
  "Dockerfile"
]

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
