[package]
name = "echo-server"
version = "2.0.0"
authors = ["Martijn Swaagman <martijn@swaagman.online>"]
description = "HTTP echo server"
edition = "2021"
license = "MIT"
keywords = ["echo", "server", "http"]
exclude = [
  ".github",
  "Dockerfile"
]

[dependencies]
structopt = "0.3.25"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4.2"